# sparsejax

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  pyproject.toml
csrc/: README.md  cudss_logdet.h  cudss_logdet_kernel.cu  cudss_solve_logdet.h  cudss_spd_solve.h  cudss_state.h  module.cc
examples/: benchmark_spsolve.py  benchmark_suite.py
rust_backend/: lib.rs
src/sparsejax/: __init__.py  _csr.py  dense_mode.py  rust_backend.pyi  sparse.py  utils.py
src/sparsejax/backends/: __init__.py  _cusparse_lowering.py  cholmod_backend.py  cudss_backend.py  cudss_ffi_backend.py  scipy_backend.py
src/sparsejax/ops/: __init__.py  add.py  builders.py  cholesky.py  diagmm.py  logdet.py  solve.py  symmetrize.py
src/sparsejax/ops/matmul/: __init__.py  spdmm.py  spspmm.py
tests/: conftest.py  setup.py  test_builders.py  test_cholesky.py  test_cholmod_backend_compat.py  test_solve.py  test_spadd.py  test_spdmm.py  test_spmv.py  test_spspmm.py  test_structure.py  test_utils.py
