[project]
name = "sparsejax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Elling Svee", email = "86355496+ellingsvee@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = ["jax>=0.7", "numpy", "ruff>=0.15.12", "scipy", "ty>=0.0.32"]

[project.optional-dependencies]
cholmod = ["scikit-sparse"]
cuda = [
  "jax[cuda13]>=0.7",
  "nvidia-cudss-cu13>=0.7,<0.8",
  "cupy-cuda13x",
  "nvmath-python[cu13]",
]
dev = ["pytest>=8", "rich"]
bench = ["rich"]
rust = ["maturin>=1.13,<2.0"]


[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.0",
  "jax>=0.7",
  "nvidia-cudss-cu13>=0.7,<0.8; platform_system == 'Linux'",
  "nvidia-cuda-runtime; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/sparsejax"]
cmake.args = []

[tool.scikit-build.cmake.define]


[tool.maturin]
module-name = "sparsejax.rust_backend"
python-packages = ["sparsejax"]
python-source = "src"
manifest-path = "Cargo.toml"
